<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salle"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Date et heure"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Sujets"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dGuests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Participants"
            android:fontFamily="sans-serif-light"
            android:textSize="16.5sp" />

        <Button
            android:id="@+id/dClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="OK" />

    </LinearLayout>

</ScrollView>