<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.AddMeetingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/roomColorFilter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/circle_png" />

            <TextView
                android:id="@+id/textViewRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="Sélectionné la salle de réunion"
                android:padding="12dp"
                android:drawableEnd="@drawable/ic_arow"
                android:background="@android:drawable/editbox_background"/>

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="Heure de la réunion"
                android:focusableInTouchMode="false"/>

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="Jour de la réunion"
                android:focusableInTouchMode="false" />

            <EditText
                android:id="@+id/topicLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="Sujet de la réunion"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/textViewGuests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="Sélectionné les participants"
                android:padding="12dp"
                android:drawableEnd="@drawable/ic_arow"
                android:background="@android:drawable/editbox_background"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Validé"
                android:enabled="false"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>